--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,23 @@ hs_err_pid*
 /ProyectosJAVA/ooiaGestEventosModel/build/
 /ProyectosJAVA/ooiaGestAcademicaController/build/
 ProyectosJAVA/ooiaGestHumanaController/build/built-jar.properties
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/commons-beanutils-1.9.3.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/commons-digester-2.1.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/itext-2.1.7.js7.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/spring-core-5.1.4.RELEASE.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-fonts-6.16.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-metadata-6.16.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/org.jfree.chart-osgi_1.0.19.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/org.apache.commons.commons-collections4_4.2.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/org.apache.commons.logging_1.2.0.v20180409-1502.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-chart-themes-6.16.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-annotation-processors-6.10.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/joda-time_2.9.9.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/org.jfree.jcommon-osgi_1.0.23.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-functions-6.16.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/spring-beans-5.1.4.RELEASE.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-6.16.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-custom-visualization-6.10.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/js-extra-classes.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-chart-customizers-6.16.0.jar
+!/ProyectosJAVA/AuxiliarWS/src/java/lib/javax.servlet-3.0.jar
