--- a/ProyectosJAVA/AuxiliarWS/nbproject/project.properties
+++ b/ProyectosJAVA/AuxiliarWS/nbproject/project.properties
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.9.3.jar=src\\java\\lib\\commons-beanutils-1.9.3.jar
 file.reference.commons-digester-2.1.jar=src\\java\\lib\\commons-digester-2.1.jar
@@ -40,7 +41,6 @@ file.reference.jasperreports-metadata-6.16.0.jar=src\\java\\lib\\jasperreports-m
 file.reference.javax.servlet-3.0.jar=src\\java\\lib\\javax.servlet-3.0.jar
 file.reference.joda-time_2.9.9.jar=src\\java\\lib\\joda-time_2.9.9.jar
 file.reference.js-extra-classes.jar=src\\java\\lib\\js-extra-classes.jar
-file.reference.mysql-connector-java-8.0.21.jar=src\\java\\lib\\mysql-connector-java-8.0.21.jar
 file.reference.mysql-connector-java-8.0.24.jar=src\\java\\lib\\mysql-connector-java-8.0.24.jar
 file.reference.org.apache.commons.commons-collections4_4.2.0.jar=src\\java\\lib\\org.apache.commons.commons-collections4_4.2.0.jar
 file.reference.org.apache.commons.logging_1.2.0.v20180409-1502.jar=src\\java\\lib\\org.apache.commons.logging_1.2.0.v20180409-1502.jar
@@ -88,7 +88,6 @@ javac.classpath=\
     ${file.reference.javax.servlet-3.0.jar}:\
     ${file.reference.joda-time_2.9.9.jar}:\
     ${file.reference.js-extra-classes.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}:\
     ${file.reference.org.apache.commons.commons-collections4_4.2.0.jar}:\
     ${file.reference.org.apache.commons.logging_1.2.0.v20180409-1502.jar}:\
     ${file.reference.org.jfree.chart-osgi_1.0.19.jar}:\
@@ -121,7 +120,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.Interfaces=../Interfaces
