Agregue la pantalla de descargar reporte asesor
Agregue la pantalla de descargar reporte asesor

--- a/ProyectosJAVA/AuxiliarWS/nbproject/private/private.properties
+++ b/ProyectosJAVA/AuxiliarWS/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/7mo ciclo/LP2/glassfish5/glassfish/domains/domain1
 j2ee.server.home=C:/7mo ciclo/LP2/glassfish5/glassfish
 j2ee.server.instance=[C:\\7mo ciclo\\LP2\\glassfish5\\glassfish;C:\\7mo ciclo\\LP2\\glassfish5\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
 j2ee.server.middleware=C:/7mo ciclo/LP2/glassfish5
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
