--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -33,6 +33,7 @@
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="PlantillasCSVcargaWSPortBinding" />
                 <binding name="GestionHumanaWSPortBinding" />
+                <binding name="ReporteAsesorOpinionWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -75,6 +76,9 @@
             <endpoint address="http://localhost:8080/AuxiliarWS/GestionHumanaWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
                 contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteAsesorOpinionWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
+                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
