Reporte Evento Csharp

--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -34,6 +34,7 @@
                 <binding name="PlantillasCSVcargaWSPortBinding" />
                 <binding name="GestionHumanaWSPortBinding" />
                 <binding name="ReporteAsesorOpinionWSPortBinding" />
+                <binding name="ReporteEventoAlumnoWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -79,6 +80,9 @@
             <endpoint address="http://localhost:8080/AuxiliarWS/ReporteAsesorOpinionWS"
                 binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
                 contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
+            <endpoint address="http://localhost:8082/AuxiliarWS/ReporteEventoAlumnoWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
+                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
