--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -47,40 +47,40 @@
             <endpoint address="http://localhost:8080/WebServicesOOIA/CodigoWS"
                 binding="basicHttpBinding" bindingConfiguration="CodigoAtencionWSPortBinding"
                 contract="CodigoWS.CodigoAtencionWS" name="CodigoAtencionWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/GestionAtencionWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
-                contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/CursosLlevadosCSVcargaWS"
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/AlumnosCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="AlumnosCSVcargaWS1PortBinding"
+                contract="CargarCSValumnosWS.AlumnosCSVcargaWS1" name="AlumnosCSVcargaWS1Port" />
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/CursosLlevadosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="CursosLlevadosCSVcargaWSPortBinding"
                 contract="CargarCSVcursosLlevadosWS.CursosLlevadosCSVcargaWS"
                 name="CursosLlevadosCSVcargaWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/ProfesoresCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="ProfesoresCSVcargaWSPortBinding"
-                contract="CargarCSVprofesoresWS.ProfesoresCSVcargaWS" name="ProfesoresCSVcargaWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/GestionEventoWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
-                contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/AlumnosCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="AlumnosCSVcargaWS1PortBinding"
-                contract="CargarCSValumnosWS.AlumnosCSVcargaWS1" name="AlumnosCSVcargaWS1Port" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/EvaluacionesCSVcargaWS"
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/EvaluacionesCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="EvaluacionesCSVcargaWSPortBinding"
                 contract="CargarCSVevaluacionesWS.EvaluacionesCSVcargaWS"
                 name="EvaluacionesCSVcargaWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/PsicologosCSVcargaWS"
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/ProfesoresCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="ProfesoresCSVcargaWSPortBinding"
+                contract="CargarCSVprofesoresWS.ProfesoresCSVcargaWS" name="ProfesoresCSVcargaWSPort" />
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PsicologosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="PsicologosCSVcargaWSPortBinding"
                 contract="CargarCSVpsicologosWS.PsicologosCSVcargaWS" name="PsicologosCSVcargaWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/PlantillasCSVcargaWS"
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/ReporteAsesorOpinionWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
+                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/GestionAtencionWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
+                contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/GestionEventoWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
+                contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
+            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PlantillasCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="PlantillasCSVcargaWSPortBinding"
                 contract="ObtenerPlantillaCSVcargaWS.PlantillasCSVcargaWS"
                 name="PlantillasCSVcargaWSPort" />
             <endpoint address="http://localhost:8080/AuxiliarWS/GestionHumanaWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
                 contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteAsesorOpinionWS"
-                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
-                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
-            <endpoint address="http://localhost:8082/AuxiliarWS/ReporteEventoAlumnoWS"
+            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteEventoAlumnoWS"
                 binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
                 contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
         </client>
