--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -17,28 +17,19 @@
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="CodigoAtencionWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
-                <binding name="CursosLlevadosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="ProfesoresCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="GestionEventoWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="GestionAtencionWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="AlumnosCSVcargaWS1PortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="EvaluacionesCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PsicologosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PlantillasCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="ReporteAsesorOpinionWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="ReporteEventoAlumnoWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="GestionHumanaWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+                <binding name="AlumnosCSVcargaWS1PortBinding" />
+                <binding name="CursosLlevadosCSVcargaWSPortBinding" />
+                <binding name="EvaluacionesCSVcargaWSPortBinding" />
+                <binding name="ProfesoresCSVcargaWSPortBinding" />
+                <binding name="PsicologosCSVcargaWSPortBinding" />
+                <binding name="ReporteAsesorOpinionWSPortBinding" />
+                <binding name="GestionAtencionWSPortBinding" />
+                <binding name="GestionEventoWSPortBinding" />
+                <binding name="PlantillasCSVcargaWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -51,7 +42,10 @@
             <endpoint address="http://localhost:8080/WebServicesOOIA/CodigoWS"
                 binding="basicHttpBinding" bindingConfiguration="CodigoAtencionWSPortBinding"
                 contract="CodigoWS.CodigoAtencionWS" name="CodigoAtencionWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/ReporteEventoAlumnoWS"
+            <endpoint address="http://localhost:8080/AuxiliarWS/GestionHumanaWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
+                contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteEventoAlumnoWS"
                 binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
                 contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
             <endpoint address="http://localhost:8080/AuxiliarWS/AlumnosCSVcargaWS"
@@ -80,9 +74,6 @@
             <endpoint address="http://localhost:8080/AuxiliarWS/GestionEventoWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
                 contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/GestionHumanaWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
-                contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
             <endpoint address="http://localhost:8080/AuxiliarWS/PlantillasCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="PlantillasCSVcargaWSPortBinding"
                 contract="ObtenerPlantillaCSVcargaWS.PlantillasCSVcargaWS"
