Arreglo de diseño - Gestionar Datos

--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -32,7 +32,8 @@
                 <binding name="PsicologosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="PlantillasCSVcargaWSPortBinding" />
-                <binding name="GestionHumanaWSPortBinding" />
+                <binding name="GestionHumanaWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
                 <binding name="ReporteAsesorOpinionWSPortBinding" />
                 <binding name="ReporteEventoAlumnoWSPortBinding" />
             </basicHttpBinding>
