--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -33,7 +33,7 @@
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="PlantillasCSVcargaWSPortBinding" />
                 <binding name="GestionHumanaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="ReporteAsesorOpinionWSPortBinding" />
                 <binding name="ReporteEventoAlumnoWSPortBinding" />
             </basicHttpBinding>
@@ -72,9 +72,6 @@
                 binding="basicHttpBinding" bindingConfiguration="CursosLlevadosCSVcargaWSPortBinding"
                 contract="CargarCSVcursosLlevadosWS.CursosLlevadosCSVcargaWS"
                 name="CursosLlevadosCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/ReporteEventoAlumnoWS"
-                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
-                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
             <endpoint address="http://54.157.187.65:8080/AuxiliarWS/AlumnosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="AlumnosCSVcargaWS1PortBinding"
                 contract="CargarCSValumnosWS.AlumnosCSVcargaWS1" name="AlumnosCSVcargaWS1Port" />
@@ -84,6 +81,9 @@
             <endpoint address="http://localhost:8080/AuxiliarWS/ReporteAsesorOpinionWS"
                 binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
                 contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteEventoAlumnoWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
+                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
